@@ -1,7 +1,10 @@
 2005-12-29  Kazuhiko  <kazuhiko@fdiary.net>
+	* hiki/interwiki.rb (interwiki): escapeHTML uris (by KURODA
+	Hiraku [Hik-dev:01089]).
+
 	* plugin/02help.rb: code cleanup by NAGASAKI.
 
-	* style/default/hikidoc.rb: sync with hikidoc rev.35.
+	* style/default/hikidoc.rb: sync with hikidoc rev.36.
 	  support relative inline URLs.
 	  fix parse_table (reported by H.M) (closes #44).
 
